inital changes to add, remove and pending requests for friends list page
